# hackathon-opus-47

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTEXT_DUOLINGO.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  concept.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  relock.yml
data/eval/: l1_gold.csv
demo/public/: app.js  data.json  index.html  styles.css
docs/: ADRs.md  SECURITY.md  auditable_design_pitch.md  value_proposition.md
docs/evals/: baseline_b1_matched.md  design_brief_matched.md  l10_evolution_matched.md  l1_model_evaluation.md  l2_full_corpus_three_way.md  l2_structure_evaluation.md  l3_full_corpus_three_way.md  l3b_full_corpus_three_way.md  l3b_matched_three_way.md  l4_audit_accessibility_matched.md  l4_audit_business_alignment_matched.md  l4_audit_decision_psychology_matched.md  l4_audit_interaction_design_matched.md  l4_audit_usability_fundamentals_three_way.md  l4_audit_ux_architecture_matched.md  l5_reconcile_matched.md  l6_weight_matched.md  l7_decide_matched.md  l8_loop.md  l8_optimize_matched.md  verify_on_product_matched.md
examples/: design_brief_cluster02_opus47.md  design_brief_cluster11_opus47.md
scripts/: baseline_b1.py  build_demo_data.py  build_l4_inputs.py  build_l5_bundles.py  collect_reviews.py  compare_models.py  export_design_brief.py  run_baseline_b1_matched.sh  run_export_design_brief_matched.sh  run_export_design_brief_shared_matched.sh  run_l1_matched.sh  run_l2_matched.sh  run_l3_single.sh  run_l3b_matched.sh  run_l3b_matched_rubric_v2.sh  run_l3b_shared_matched.sh  run_l4_accessibility_matched.sh  run_l4_business_alignment_matched.sh  run_l4_decision_psychology_matched.sh  run_l4_interaction_design_matched.sh  run_l4_norman_wcag_cluster02_matched.sh  run_l4_shared_matched.sh  run_l4_ux_architecture_matched.sh  run_l5_reconcile_matched.sh  run_l5_shared_matched.sh  run_l6_shared_matched.sh  run_l6_weight_matched.sh  run_l7_decide_matched.sh  run_l7_shared_matched.sh  run_l8_loop_matched.sh  run_l8_loop_shared_matched.sh  run_l8_optimize_matched.sh  run_l8_optimize_shared_matched.sh  run_verify_on_product_matched.sh  run_verify_on_product_shared_matched.sh  smoke_l4_accessibility_multimodal.py  smoke_l4_business_alignment_multimodal.py  smoke_l4_decision_psychology_multimodal.py  smoke_l4_interaction_design_multimodal.py  smoke_l4_usability_fundamentals_multimodal.py  (+7 more)
skills/audit-accessibility/: SKILL.md
skills/audit-business-alignment/: SKILL.md
skills/audit-decision-psychology/: SKILL.md
skills/audit-interaction-design/: SKILL.md
skills/audit-usability-fundamentals/: SKILL.md
skills/audit-ux-architecture/: SKILL.md
skills/design-decide/: SKILL.md
skills/design-optimize/: SKILL.md
skills/design-tweak/: SKILL.md
tests/: test_claude_client.py  test_collect_reviews.py  test_l10_evolution.py  test_l1_classify.py  test_l2_structure.py  test_l3_cluster.py  test_l3b_label.py  test_l4_audit.py  test_l4_audit_accessibility.py  test_l4_audit_business_alignment.py  test_l4_audit_decision_psychology.py  test_l4_audit_interaction_design.py  test_l4_audit_ux_architecture.py  test_l5_reconcile.py  test_l6_weight.py  test_l7_decide.py  test_l8_optimize.py  test_l8_optimize_loop.py  test_local_encoder.py  test_pareto.py  test_prompt_builder.py  test_schemas.py  test_storage.py  test_tchebycheff.py
video/: generate_thumbnail.py  index.html  scene_01_hook.html  scene_01b_team.html  scene_02_caption.html  scene_02_problem.html  scene_02b_system_tease.html  scene_03_result.html  scene_03_traceable.html  scene_04_pipeline.html  scene_05_cluster.html  scene_05b_dissection.html  scene_05c_pixels.html  scene_06_coverage.html  scene_07_climax.html  scene_07a_compare.html  scene_07b_copy.html  scene_07c_rubric.html  scene_07d_opus.html  scene_08_direction.html  scene_08b_cost.html  scene_09_brief.html  scene_11_closing.html
(+34 files in other folders)
